# tchat

./: CMakeLists.txt  CMakeLists.txt.linux.bk  LICENSE  README.md
client/: CMakeLists.txt  chat_client.cpp  chat_client.h  main.cpp
common/: CMakeLists.txt  logger.cpp  logger.h  noncopyable.h
server/: CMakeLists.txt  Untitled Diagram.xml  chat_config.h  chat_connection.cpp  chat_connection.h  chat_connection_manager.cpp  chat_connection_manager.h  chat_manager.h  chat_message.h  chat_nickname_factory.h  chat_participant.h  chat_rapidjson.cpp  chat_rapidjson.h  chat_room.cpp  chat_room.h  chat_room_demo.h  chat_room_manager.cpp  chat_room_manager.h  chat_server.cpp  chat_server.h  chat_session.cpp  chat_session.h  chat_session_manager.cpp  chat_session_manager.h  chat_socket.cpp  chat_socket.h  chat_time_wheel.cpp  chat_time_wheel.h  chat_timeout_manager.cpp  chat_timeout_manager.h  chat_user.cpp  chat_user.h  main.cpp
tests/: CMakeLists.txt  asio_test.h  boost_test.h  chat_message_test.h  chat_user_test.h  cpp_test.h  logger_test.h  main.cpp  rapidjson_test.h  test_utils.h
